app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
$body-bg: #F9F2E7;
$brand-warning: #8FBE00;

// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
  overflow-y: scroll; // to prevent screen jumping when certain days are selected
  color: #4e4b4b;
}

/* Everything gets side spacing for mobile first views */
.header,
.content,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  padding-top: 20px;

  .logo {
    background: #40c0cb;
    width: 220px;
    height: 50px;
    margin: 0 auto;
    text-align: center;
    padding: 3px 15px;
    color: #fff;
    border-radius: 4px;
    font-size: 30px;
    font-weight: 100;
    letter-spacing: 2px;
  }

  .navbar {
    margin-bottom: 0;
  }

  .navbar-header {
    width: 100%;
  }
  .navbar-brand {
    background: url(../images/logo.png) center no-repeat;
    background-size: contain;
    text-indent: -999em;
    width: 100%;
    margin: 10px 0;
  }
  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Supporting marketing content */
.content {
  margin: 20px 0;

  h1 {
    text-transform: uppercase;
    color: #40C0CB;
  }
  p + h4 {
    margin-top: 28px;
  }
  .btn-group .btn {
    text-transform: capitalize;
    background: #00A8C6;
    color: white;
    border-color: white;

    &.active, &:hover {
      background: #40C0CB;
    }
  }
  .dropdown-menu li {
    text-transform: capitalize;
  }
}

.tab-content {
  background: white;
  padding: 0px 20px 20px;
  margin-top: 10px;
  border-radius: 4px;
}

.done {
  text-decoration: line-through;
  color: #bbb;
}

.no-margin-top { margin-top: 0 !important; }
.no-margin-right { margin-right: 0 !important; }
.no-margin-left { margin-left: 0 !important; }
.no-pad-right { padding-right: 0 !important; }
.no-pad-left { padding-left: 0 !important; }

.text-danger { color: #40C0CB; }
.btn-link {
  color: #00A8C6;

  &:hover {
    color: #40C0CB;
  }
}
.btn-warning:hover {
  background-color: #AEE239;
  border-color: darken(#AEE239, 20%);
}

.modal img { width: 100%; }

.panel-default > .panel-heading {
  background-color: #E9E9E9;
  border-color: #BCBCBC;
  border-bottom: inherit;

  .badge {
    background-color: #00A8C6;
  }
}

.panel-heading, .panel-body, li {
  transition: all ease-in 0.3s;
}

.panel {
  transition: all ease-in 0.3s;
  box-shadow: none;

  .checkbox {
    margin-top: 0;
    padding: 0;
  }

  &.panel-success {
    background: $panel-success-heading-bg;

    li {
      background: $panel-success-heading-bg;
      border-color: darken($panel-success-heading-bg, 10%);

      .done {
        color: darken($panel-success-heading-bg, 30%);
      }
    }
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .content,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
}

